[package]
name = "c0c"
version = "0.1.0"
authors = ["Cool Partner 1 <your-email-here@andrew.cmu.edu>", "Cool Partner 2 <your-other-email@andrew.cmu.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c0c"
path = "src/main.rs"

[lib]
name = "compile_wasm"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
enum-as-inner = "0.6.0"
lazy_static = "1.4.0"
lalrpop-util = "0.20.0"
logos = "0.12.1" # Note this is a version behind because I couldn't figure out 0.13
strum_macros = "0.25.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.61"
log = "0.4.14"
env_logger = { version = "0.10.0" }
toml = "0.8.12"
wasm-bindgen="0.2"

[build-dependencies]
lalrpop = "0.20.0"

